[package]
name = "cryptoflow"
version = "0.1.1"
edition = "2024"

[workspace]
members = [
    "binance",
    "binance/spot",
    "binance/usdt",
    "pyalgo", 
    "websocket",
]

[workspace.dependencies]
anyhow = "1.0.82"
base64 = "0.22.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = {version = "4.5.4", features = ["derive"] }
ed25519-dalek = { version = "2.2.0", features = ["pkcs8"] }
futures = "0.3.30"
futures-util = "0.3.30"
hmac = "0.12"
log = "0.4.21"
native-json = "1.2.10"
once_cell = "1"
openssl = "0.10.64"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10"
sqlx = { version = "0.8.4", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = [
    "native-tls",
] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-appender = { version = "0.2.2" }
tungstenite  = { version = "0.27.0" }
url = "2.5.0"
dotenv = { version = "0.15" }





[dependencies]
anyhow = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true}
tokio = { workspace = true}
url = { workspace = true }
tokio-tungstenite = {workspace = true }
native-json = {workspace = true}
serde_json = {workspace = true}
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
