[package]
name = "websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
dotenv.workspace = true
futures.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
url.workspace = true
once_cell.workspace = true
hmac.workspace = true
sha2.workspace = true
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
