[package]
name = "xcrypto"
version = "0.1.1"
edition = "2021"

[workspace]
members = [
    "binance",
    "binance/spot",
    "binance/usdt",
    "logger",
    "pyalgo",
] 

[workspace.dependencies]
anyhow = "1.0.82"
base64 = "0.22.1"
clap = {version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
futures-util = "0.3.30"
log = "0.4.21"
native-json = "1.2.10"
openssl = "0.10.64"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.8.4", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = [
    "native-tls",
] }
tungstenite  = { version = "0.27.0" }
url = "2.5.0"
logger = { path = "logger" }



[dependencies]
anyhow = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true}
tokio = { workspace = true}
url = { workspace = true }
tokio-tungstenite = {workspace = true }
native-json = {workspace = true}
logger = { path = "logger" }
serde_json = {workspace = true}
sqlx = { workspace = true }
