[package]
name = "usdt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
log.workspace = true
native-json.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tungstenite.workspace = true
url.workspace = true
binance = {path ="../"}
cryptoflow = {path ="../../"}
websocket = {path = "../../websocket"}
